--- a/TIM/app/src/main/res/layout/activity_main.xml
+++ b/TIM/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/settingBg"
+                android:background="@color/colorPrimary"
                 android:elevation="1dp"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"></android.support.v7.widget.Toolbar>
 
@@ -25,12 +25,12 @@
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/settingSeekBarBg"
+                android:background="#eeeeee"
                 android:elevation="1dp"
                 app:tabGravity="fill"
                 app:tabMode="fixed"
-                app:tabSelectedTextColor="@color/colorAccent"
-                app:tabTextColor="@color/colorPrimary">
+                app:tabSelectedTextColor="@color/settingBg"
+                app:tabTextColor="#888888">
 
             </android.support.design.widget.TabLayout>
         </android.support.design.widget.AppBarLayout>
